fix: use labels instead of type (cannot be used?) in issue templates

--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -2,7 +2,8 @@
 name: "Bug report"
 description: "Report a bug or unexpected behavior"
 title: "[Bug] "
-type: bug
+labels:
+  - bug
 body:
   - type: markdown
     attributes:
